--- a/13_정규화-희소성.md
+++ b/13_정규화-희소성.md
@@ -56,9 +56,6 @@ california_housing_dataframe = california_housing_dataframe.reindex(
     np.random.permutation(california_housing_dataframe.index))
 ```
 
-    C:\Users\GIGABYTE\Anaconda3\lib\site-packages\h5py\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.
-      from ._conv import register_converters as _register_converters
-    
 
 
 ```python
@@ -105,7 +102,9 @@ def preprocess_targets(california_housing_dataframe):
   return output_targets
 ```
 
+<br>
 
+###### In
 ```python
 # Choose the first 12000 (out of 17000) examples for training.
 training_examples = preprocess_features(california_housing_dataframe.head(12000))
@@ -126,28 +125,11 @@ display.display(training_targets.describe())
 print("Validation targets summary:")
 display.display(validation_targets.describe())
 ```
-
+###### Out
     Training examples summary:
     
-
-
-<div>
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
+<table>
+    <tr>
       <th></th>
       <th>latitude</th>
       <th>longitude</th>
@@ -159,8 +141,6 @@ display.display(validation_targets.describe())
       <th>median_income</th>
       <th>rooms_per_person</th>
     </tr>
-  </thead>
-  <tbody>
     <tr>
       <th>count</th>
       <td>12000.0</td>
@@ -257,32 +237,14 @@ display.display(validation_targets.describe())
       <td>15.0</td>
       <td>52.0</td>
     </tr>
-  </tbody>
 </table>
-</div>
 
+<br>
 
     Validation examples summary:
     
-
-
-<div>
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
+<table>
+    <tr>
       <th></th>
       <th>latitude</th>
       <th>longitude</th>
@@ -294,8 +256,6 @@ display.display(validation_targets.describe())
       <th>median_income</th>
       <th>rooms_per_person</th>
     </tr>
-  </thead>
-  <tbody>
     <tr>
       <th>count</th>
       <td>5000.0</td>
@@ -392,37 +352,17 @@ display.display(validation_targets.describe())
       <td>15.0</td>
       <td>55.2</td>
     </tr>
-  </tbody>
 </table>
-</div>
 
+<br>
 
     Training targets summary:
     
-
-
-<div>
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
+<table>
+    <tr>
       <th></th>
       <th>median_house_value_is_high</th>
     </tr>
-  </thead>
-  <tbody>
     <tr>
       <th>count</th>
       <td>12000.0</td>
@@ -455,37 +395,17 @@ display.display(validation_targets.describe())
       <th>max</th>
       <td>1.0</td>
     </tr>
-  </tbody>
 </table>
-</div>
 
+<br>
 
     Validation targets summary:
     
-
-
-<div>
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
+<table>
+    <tr>
       <th></th>
       <th>median_house_value_is_high</th>
     </tr>
-  </thead>
-  <tbody>
     <tr>
       <th>count</th>
       <td>5000.0</td>
@@ -518,11 +438,9 @@ display.display(validation_targets.describe())
       <th>max</th>
       <td>1.0</td>
     </tr>
-  </tbody>
 </table>
-</div>
 
-
+<br>
 
 ```python
 def my_input_fn(features, targets, batch_size=1, shuffle=True, num_epochs=None):
@@ -839,7 +757,9 @@ def train_linear_classifier_model(
   return linear_classifier
 ```
 
+<br>
 
+###### In
 ```python
 linear_classifier = train_linear_classifier_model(
     learning_rate=0.1,
@@ -854,7 +774,7 @@ linear_classifier = train_linear_classifier_model(
     validation_targets=validation_targets)
 print("Model size:", model_size(linear_classifier))
 ```
-
+###### Out
     Training model...
     LogLoss (on validation data):
       period 00 : 0.31
@@ -869,10 +789,12 @@ print("Model size:", model_size(linear_classifier))
     
 
 
-![png](output_19_1.png)
+![png](png/13_output_19_1.png)
 
 
+<br>
 
+###### In
 ```python
 linear_classifier = train_linear_classifier_model(
     learning_rate=0.1,
@@ -886,7 +808,7 @@ linear_classifier = train_linear_classifier_model(
     validation_targets=validation_targets)
 print("Model size:", model_size(linear_classifier))
 ```
-
+###### Out
     Training model...
     LogLoss (on validation data):
       period 00 : 0.31
@@ -901,5 +823,5 @@ print("Model size:", model_size(linear_classifier))
     
 
 
-![png](output_20_1.png)
+![png](png/13_output_20_1.png)
 
