--- a/13_정규화-희소성.md
+++ b/13_정규화-희소성.md
@@ -25,11 +25,11 @@
 ##### L1과 L2 비교
 
 > 1. 서로 다른 방식으로 가중치에 페널티를 준다.
- * L2 : 가중치의 제곱
- * L1 : 가중치의 절대값
+>  * L2 : 가중치의 제곱
+>  * L1 : 가중치의 절대값
 > 2. 결과적으로 서로 다르게 미분된다.
- * L2 : 2 * 가중치
- * L1 : 가중치와 무과한 상수 값
+>  * L2 : 2 * 가중치
+>  * L1 : 가중치와 무과한 상수 값
 
 > * L2의 미분계수는 매번 가중치의 x%만큼 제거한다고 생각하면 된다. <br>
  따라서, 절대 0이 되지 않는다.
